test-httproute2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: app2
spec:
  hostnames:
    - "app2-myapp.example.com"
  parentRefs:
    - name: restricted-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app2
          port: 80
